app/page.module.css
.root {
    height: 100svh;
    display: flex;
    justify-content: center;

    .header {
        width: 100%;
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: column;
        gap: 2rem;
        z-index: 1;
        align-self: flex-start;

        .logoText {
            margin-top: 5rem;
            width: min(90%, 1200px);
            filter: drop-shadow(0 0 3px white);
            pointer-events: none;
        }

        .title {
            font-size: 2.3rem;
            color: black;
            font-weight: 900;
            text-transform: uppercase;
            text-shadow: 0 0 5px white;
            text-align: center;

            @media screen and (max-width: 768px) {
                font-size: 1.5rem;
            }

            @media screen and (max-width: 480px) {
                font-size: 1.2rem;
            }
        }

        @media screen and (max-width: 1280px) and (orientation: portrait) {
            padding-top: 10rem;
        }
    }

    .cityscape {
        position: fixed;
        align-self: flex-end;
        width: 100%;
        height: auto;
        filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.1));
    }

    .footer {
        position: fixed;
        bottom: 0;
        width: 100%;
        display: flex;
        justify-content: flex-end;
        padding: 1rem;
        z-index: 1;
        color: rgba(71, 169, 224, 0.7);
        font-weight: bold;
        font-size: 0.8rem;
    }
}

